--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mst-sales-recon-fe",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,31 +11,34 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@mantine/charts": "^7.11.2",
-    "@mantine/core": "^7.11.2",
-    "@mantine/dates": "^7.11.2",
-    "@mantine/form": "^7.11.2",
-    "@mantine/hooks": "^7.11.2",
-    "@mantine/modals": "^7.11.2",
-    "@mantine/notifications": "^7.11.2",
-    "@mantine/nprogress": "^7.11.2",
+    "@mantine/charts": "^7.12.0",
+    "@mantine/core": "^7.12.0",
+    "@mantine/dates": "^7.12.0",
+    "@mantine/form": "^7.12.0",
+    "@mantine/hooks": "^7.12.0",
+    "@mantine/modals": "^7.12.0",
+    "@mantine/notifications": "^7.12.0",
+    "@mantine/nprogress": "^7.12.0",
+    "@nestjs/cqrs": "^10.2.7",
     "@tabler/icons-react": "^3.11.0",
     "dayjs": "^1.11.12",
+    "http-proxy-middleware": "^3.0.0",
     "internal-ip": "7.0.0",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "recharts": "2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-imask": "^7.6.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.0.0-beta.23",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@tauri-apps/cli": "^2.0.0-rc.1",
+    "@types/node": "^20.14.14",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   }
 }
