--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mantine/nprogress": "^7.12.0",
     "@nestjs/cqrs": "^10.2.7",
     "@tabler/icons-react": "^3.11.0",
+    "@tauri-apps/api": "^2.0.0-rc.0",
     "dayjs": "^1.11.12",
     "http-proxy-middleware": "^3.0.0",
     "internal-ip": "7.0.0",
