--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,7 +20,8 @@ tauri-build = { version = "2.0.0-rc.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-rc.0", features = [] }
+tauri = { version = "2.0.0-rc.0", features = ["devtools"] }
 openssl = { version = "0.10.66", features = ["vendored"] }
 reqwest = "0.12.5"
+tauri-plugin-http = "2.0.0-beta.0"
 
